# redis-plot

./: .gitignore  Cargo.toml  README.md  flake.nix  hello.slint
src/: argparse.rs  launcher.rs  lib.rs  utils.rs
tests/: integration.rs
tests/snapshots/: integration__everything-2.snap  integration__everything.snap
writer/: Cargo.toml  demo.slint
writer/src/: main.rs
